--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,12 @@
+auxiliary.org-netbeans-modules-php-apigen.deprecated=false
+auxiliary.org-netbeans-modules-php-apigen.download=false
+auxiliary.org-netbeans-modules-php-apigen.hasConfig=false
+auxiliary.org-netbeans-modules-php-apigen.internal=false
+auxiliary.org-netbeans-modules-php-apigen.php=true
+auxiliary.org-netbeans-modules-php-apigen.sourceCode=true
 auxiliary.org-netbeans-modules-php-apigen.target=C:\\xampp\\htdocs\\NuriaMVC\\nbproject
+auxiliary.org-netbeans-modules-php-apigen.todo=false
+auxiliary.org-netbeans-modules-php-apigen.tree=true
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\PhpProject2
